--- a/src/simtravel/form/FrmDaftarPengguna.form
+++ b/src/simtravel/form/FrmDaftarPengguna.form
@@ -244,7 +244,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Export "/>
+            <Property name="text" type="java.lang.String" value="Laporan"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="tambahBtn">
@@ -263,7 +263,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/simtravel/image/edit-16.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Edit"/>
+            <Property name="text" type="java.lang.String" value="Ubah"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditActionPerformed"/>
