--- a/src/simtravel/form/FrmLogin.form
+++ b/src/simtravel/form/FrmLogin.form
@@ -103,13 +103,13 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel3" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel3" min="-2" pref="330" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel2" min="-2" pref="101" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" min="-2" pref="95" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" pref="109" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="showPasswordCB" min="-2" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -151,7 +151,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/simtravel/image/user-32.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="User ID "/>
+                <Property name="text" type="java.lang.String" value="ID Pengguna"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="userIdField">
@@ -161,7 +161,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/simtravel/image/keychain-32.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Password "/>
+                <Property name="text" type="java.lang.String" value="Sandi"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="passwordField">
@@ -169,7 +169,7 @@
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="10" style="2"/>
+                  <Font name="Tahoma" size="12" style="3"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="0" green="33" red="ff" type="rgb"/>
@@ -182,7 +182,8 @@
             </Component>
             <Component class="javax.swing.JCheckBox" name="showPasswordCB">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Show Password"/>
+                <Property name="text" type="java.lang.String" value="Lihatkan Sandi"/>
+                <Property name="opaque" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showPasswordCBActionPerformed"/>
@@ -195,7 +196,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/simtravel/image/Unlock.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Login"/>
+            <Property name="text" type="java.lang.String" value="Masuk"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginBtnActionPerformed"/>
