--- a/src/simtravel/form/FrmPemesanan.form
+++ b/src/simtravel/form/FrmPemesanan.form
@@ -488,7 +488,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/simtravel/image/printer-16.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cetak Invoice"/>
+            <Property name="text" type="java.lang.String" value="Cetak Faktur"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="printInvoiceActionPerformed"/>
