--- a/src/simtravel/form/FrmTambahCustomer.form
+++ b/src/simtravel/form/FrmTambahCustomer.form
@@ -376,7 +376,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/simtravel/image/Open-Folder-Add-icon-16.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" Browse..."/>
+            <Property name="text" type="java.lang.String" value=" Pilih..."/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
