--- a/src/simtravel/form/FrmDaftarCalonJamaah.form
+++ b/src/simtravel/form/FrmDaftarCalonJamaah.form
@@ -217,10 +217,10 @@
                   <EmptySpace pref="227" max="32767" attributes="0"/>
                   <Component id="detailButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tambahBtn" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnEdit" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Component id="tambahBtn" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                   <Component id="btnHapus" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
