--- a/src/simtravel/form/FrmStatusPembayaran.form
+++ b/src/simtravel/form/FrmStatusPembayaran.form
@@ -375,7 +375,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/simtravel/image/simpan-16.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Ubah"/>
+            <Property name="text" type="java.lang.String" value="Simpan"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSimpanActionPerformed"/>
