--- a/src/simtravel/form/FrmTambahPaketHaji.form
+++ b/src/simtravel/form/FrmTambahPaketHaji.form
@@ -244,10 +244,13 @@
         <Component class="javax.swing.JComboBox" name="hotelCB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="1">
+                <StringItem index="0" value="-- Pilih Nama Hotel --"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hotelCBMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hotelCBActionPerformed"/>
           </Events>
           <AuxValues>
@@ -262,10 +265,13 @@
         <Component class="javax.swing.JComboBox" name="maskapaiCB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="1">
+                <StringItem index="0" value="-- Pilih Nama Maskapai --"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="maskapaiCBMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="maskapaiCBActionPerformed"/>
           </Events>
           <AuxValues>
@@ -318,10 +324,13 @@
         <Component class="javax.swing.JComboBox" name="transportCB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="1">
+                <StringItem index="0" value="-- Pilih Nama Transport --"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="transportCBMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="transportCBActionPerformed"/>
           </Events>
           <AuxValues>
