--- a/src/simtravel/form/FrmLaporanKeberangkatan.form
+++ b/src/simtravel/form/FrmLaporanKeberangkatan.form
@@ -126,7 +126,7 @@
                   <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="tglFrom" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
-                      <Component id="statusPembayaranCB" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
+                      <Component id="PencarianCB" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="28" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -149,7 +149,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <Component id="statusPembayaranCB" min="-2" max="-2" attributes="0"/>
+                      <Component id="PencarianCB" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="21" max="32767" attributes="0"/>
@@ -172,7 +172,7 @@
             <Property name="text" type="java.lang.String" value="Status "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="statusPembayaranCB">
+        <Component class="javax.swing.JComboBox" name="PencarianCB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
@@ -275,6 +275,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cetak Word"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel6MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
